After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683435 - Debian Packaging of gst-plugins-libav fails to handle MPEG
Debian Packaging of gst-plugins-libav fails to handle MPEG
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-05 16:20 UTC by Stirling Westrup
Modified: 2012-09-07 17:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Stirling Westrup 2012-09-05 16:20:53 UTC
This command, which attempts to play BigBuckBunny via an MPEG decoder, always fails:

gstlaunch filesrc location=~/Videos/BigBuckBunny1080p.avi ! decodebin ! xvimagesink

With this error:

Pipeline is PREROLLING ...
ERROR: from element /GstPipeline:pipeline0/GstDecodeBin:decodebin0/avdec_mpeg4_crystalhd:avdec_mpeg4_crystalhd0: Internal GStreamer error: negotiation problem.  Please file a bug at http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer.
Additional debug info:
gstvideodecoder.c(1885): gst_video_decoder_chain (): /GstPipeline:pipeline0/GstDecodeBin:decodebin0/avdec_mpeg4_crystalhd:avdec_mpeg4_crystalhd0:
encoder not initialized

This appears to be caused by an attempt to use the crystalhd driver by preference, even in the absence of the required hardware. This bug is present in both the 0.10.x and 0.11.x versions of the libav plugins.  The only workaround I've found has been to manually recompile the plugins with crystalhd explicitly disabled.
Comment 1 Tim-Philipp Müller 2012-09-07 17:00:07 UTC
I hope this fixes it:

 commit 22f67f7b9e4b3151df6f221f4bd5c5ff01543f8f
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Fri Sep 7 17:56:43 2012 +0100

    viddec: blacklist *crystalhd* decoder wrappers
    
    There are gstreamer crystalhd elements as well,
    so shouldn't be a big loss.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=683435